# hash-hop

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yaml
hashhop/: __init__.py  generate.py  test_generate.py
