[tool.poetry]
name = "hashhop"
version = "1.0.0"
description = "Long content evaluation for large language models"
authors = ["Magic Team <join@magic.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.22.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.1"
ruff = "^0.7.3"
codespell = "^2.3.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
files = [
    "hashhop/**/*.py",
]
